solve align the item in flex foundation

--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -1,6 +1,9 @@
 .container {
   background: dodgerblue;
   border: 4px solid midnightblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 400px;
   height: 300px;
 }
@@ -9,6 +12,7 @@
   background: palevioletred;
   font-weight: bold;
   text-align: center;
+
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
